--- a/src/Components/LoginPage/LoginPage.css
+++ b/src/Components/LoginPage/LoginPage.css
@@ -5,3 +5,8 @@
 .loginpage__logo{
     width: 175px;
 }
+.loginpage__rightcomponent {
+    height: 380px;
+    width: 350px;
+    border: 1px solid #dbdbdb;
+}
