--- a/src/Components/LoginPage/LoginPage.css
+++ b/src/Components/LoginPage/LoginPage.css
@@ -24,8 +24,17 @@
     height: 36px;
     margin: 5px;
     border: 1px solid #DBDBDB;
+    background-color: #FAFAFA;
+    padding-left: 10px;
+    border-radius: 5px;
 }
 
 .login__button {
     width: 270px;
+    height: 36px;
+    border-radius: 5px;
+    font-weight: bold;
+    border: 1px solid #0395f6;
+    background-color: #0395f6;
+    color: white;
 }
