--- a/src/Components/LoginPage/LoginPage.css
+++ b/src/Components/LoginPage/LoginPage.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #FAFAFA;
+}
+
 .loginpage__main{
     display: flex;
     margin: 25px;
@@ -13,6 +17,7 @@
     border: 1px solid #dbdbdb;
     margin-top: 25px;
     text-align: center;
+    background-color: white;
 }
 
 .loginPage__signin {
@@ -34,6 +39,7 @@
     height: 36px;
     border-radius: 5px;
     font-weight: bold;
+    margin-top: 5px;
     border: 1px solid #0395f6;
     background-color: #0395f6;
     color: white;
