--- a/src/Components/LoginPage/LoginPage.css
+++ b/src/Components/LoginPage/LoginPage.css
@@ -20,10 +20,6 @@ body {
     background-color: white;
 }
 
-.loginPage__signin {
-    margin-top: 25px;
-}
-
 .loginpage__text {
     width: 258px;
     height: 36px;
@@ -43,4 +39,59 @@ body {
     border: 1px solid #0395f6;
     background-color: #0395f6;
     color: white;
+}
+
+.login__dividor {
+    width: 80px;
+    height: 0px;
+    margin-top: 10px;
+    border: 1px solid #DBDBDB;
+}
+
+.login__or {
+    margin: 0px 10px;
+    font-weight: bold;
+    color: #8E8E8E;
+}
+
+.login__fb {
+    color: #395185;
+    font-weight: bold;
+    margin-top: 30px;
+}
+
+.login_forgt {
+    color: rgba(var(--fe0,0,55,107),1);
+}
+
+.login__signupoption {
+    margin-top: 25px;
+    height: 56px;
+    width: 250px;
+    background-color: white;
+    border: 1px solid #DBDBDB;
+    text-align: center ;
+}
+
+.loginPage__signin {
+    margin-top: 25px;
+}
+
+.login__signup {
+    margin-top: 20px;
+}
+
+.login__downloadSection {
+    height: 105px;
+    width: 350px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.login__option {
+    margin-top: 20px;
+}
+
+.login__dwimg {
+    margin-top: 5px;
 }
